# QRFS

./: .gitignore  README.md
app/QReader/: app.json  package-lock.json  package.json
app/QReader/app/(tabs)/: explore.tsx  index.tsx  scan.tsx
app/QReader/app/scanner/: index.tsx
app/QReader/components/: animated-camera.tsx
app/QReader/components/ui/: icon-symbol.tsx
file_system/: Cargo.toml
file_system/qr_test/: file_4.png.data
file_system/src/: builder.rs  disk_code.rs  lib.rs  main.rs  server.rs
