[package]
name = "file_system"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.16.0"
libc = "0.2.177"
rustc-serialize = "0.3.25"
time = "0.3.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.13"
image = "0.24"
data-encoding = "2.4"
rqrr = "0.10.0"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
base64 = "0.22.1"
